2006-09-24  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Move -pedantic from WARNING to STRICT flags.

2006-09-24  Jeroen Frijters  <jeroen@frijters.net>

	* java/nio/channels/spi/AbstractSelectableChannel.java
	(register): Set interestOps and attachment when the key already
	exists.

2006-09-24  Jeroen Frijters  <jeroen@frijters.net>

	* java/net/ServerSocket.java
	(bind(SocketAddress,int)): Added support for null address.
	Throw proper exception if already bound.
	Handle unresolved addresses correctly. Ignore exceptions that
	happen during close in error path (to prevent losing the original
	exception.)

2006-09-24  Mark Wielaard  <mark@klomp.org>

	Suggested by Aaron M. Ucko <ucko@debian.org>
	Fixes bug #29203
	* native/fdlibm/mprec.c (ulp): Define L as int32_t.

2006-09-24  Jeroen Frijters  <jeroen@frijters.net>

	* java/nio/channels/spi/AbstractSelectableChannel.java
	(implCloseChannel): Cancel all keys after closing the channel.

2006-09-22  Casey Marshall  <csm@gnu.org>

	* gnu/java/nio/EpollSelectorImpl.java (doSelect): remove keys
	after we delete them.
	(selectedKeys): return an empty set if nothing's been selected.
	* native/jni/java-nio/gnu_java_nio_EpollSelectorImpl.c
	(Java_gnu_java_nio_EpollSelectorImpl_epoll_1delete): don't
	throw an exception on EBADF.
	(Java_gnu_java_nio_EpollSelectorImpl_epoll_1wait): don't
	throw exception on EINTR, just return 0.
	
2006-09-22  Casey Marshall  <csm@gnu.org>

	* native/jni/java-io/java_io_VMFile.c (Java_java_io_VMFile_list):
	remove `const' from `filename.'
	* native/jni/native-lib/cpio.c (cpio_readDir): remove `const' from
	`filename.'
	* native/jni/native-lib/cpio.h (cpio_readDir): likewise.

2006-09-22  Casey Marshall  <csm@gnu.org>

	* configure.ac (AC_CHECK_FUNCS): check for `readdir_r.'
	* native/jni/java-io/java_io_VMFile.c (Java_java_io_VMFile_list):
	allocate `filename,' and handle changes to `cpio_readDir.'
	* native/jni/native-lib/cpio.c (cpio_readDir): use `readdir_r' if